deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger
  namespace: acger
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: jaeger.k8
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 16686
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: acger
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: prometheus.k8
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: acger
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: grafana.k8
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acger-pair
  namespace: acger
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: acger.k8
      http:
        paths:
          - path: "/user"
            pathType: Prefix
            backend:
              service:
                name: user-api-svc
                port:
                  number: 50001
          - path: "/pair"
            pathType: Prefix
            backend:
              service:
                name: pair-api-svc
                port:
                  number: 50002
          - path: "/chat"
            pathType: Prefix
            backend:
              service:
                name: chat-api-svc
                port:
                  number: 50003
